[package]
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
name = "kelvin"
repository = "https://github.com/dusk-network/kelvin"
description = "Merkle tree tooklit and backend"
tags = ["merkle", "datastructure", "database"]
version = "0.4.0"
license = "MPL-2.0"

[dependencies]
arrayvec = "0.4.10"
bytehash = "0.1"
cache = "0.2.0"
owning_ref = "0.4.0"
parking_lot = "0.6.4"
tempfile = "3.0.3"
appendix = { version = "0.1", optional = true }
web-sys = { optional = true, features = [ "Window", "Storage" ], version = "*"}
futures = "0.3.1"
wasm-bindgen = { optional = true, version = "*" }
smallvec = "0.6"
seahash = "3.0"
base64 = "0.11"
num = "0.2"

[dependencies.byteorder]
features = ["i128"]
version = "1.2.2"

[dev-dependencies]
tempfile = "3.0"
rand = "0.6.5"
quickcheck = "0.8"
criterion = "0.2"

[features]
default = ["filesystem"]

filesystem = ["appendix"]
web = ["web-sys", "wasm-bindgen" ]

[[bench]]
name = "insert_hamt"
path = "benches/insert_hamt.rs"
harness = false

[[bench]]
name = "insert_btree"
path = "benches/insert_btree.rs"
harness = false

[[bench]]
name = "iter_hamt"
path = "benches/iter_hamt.rs"
harness = false

[[bench]]
name = "iter_btree"
path = "benches/iter_btree.rs"
harness = false

[[bench]]
name = "get_hamt"
path = "benches/get_hamt.rs"
harness = false

[[bench]]
name = "get_btree"
path = "benches/get_btree.rs"
harness = false