[package]
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
name = "kelvin"
repository = "https://github.com/dusk-network/kelvin"
description = "Merkle tree tooklit and backend"
keywords = ["merkle", "datastructure", "database"]
version = "0.11.1"
license = "MPL-2.0"

[dependencies]
arrayvec = "0.5.1"
bytehash = "0.2"
atomicwrites = "0.2"
cache = "0.2.0"
owning_ref = "0.4.0"
parking_lot = "0.6.4"
tempfile = "3.0.3"
appendix = { version = "0.2", optional = true }
web-sys = { optional = true, features = [ "Window", "Storage" ], version = "0.3"}
futures = "0.3.1"
wasm-bindgen = { optional = true, version = "0.2" }
base64 = "0.11"
num = "0.2"
quickcheck = "0.8"
rand = "0.6.5"
arbitrary = { version = "0.3", features = ["derive"] }

[dependencies.byteorder]
features = ["i128"]
version = "1.2.2"

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["filesystem"]

filesystem = ["appendix"]
web = ["web-sys", "wasm-bindgen" ]
