[package]
name = "kelvin-btree"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
repository = "https://github.com/dusk-network/kelvin"
tags = ["datastructure", "kelvin"]
license = "MPL-2.0"
description = "BTree Data structure"

[dependencies]
kelvin = { path = "../..", version = "0.4"  }
arrayvec = "0.5"