[package]
name = "kelvin-hamt"
version = "0.13.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
repository = "https://github.com/dusk-network/kelvin"
keywords = ["datastructure", "kelvin"]
description = "HAMT Data structure"
license = "MPL-2.0"

[dependencies]
kelvin = { path = "../..", version = "0.19" }
canonical = { path = "../../../canonical/canon" }
canonical_derive = { path = "../../../canonical/canon_derive" }
