[package]
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
description = "Radix Tree data structure"
edition = "2018"
license = "MPL-2.0"
name = "kelvin-radix"
repository = "https://github.com/dusk-network/kelvin"
tags = ["datastructure", "kelvin"]
version = "0.5.0"

[dependencies]
smallvec = "1.1"
kelvin = { path = "../..", version = "0.9" }
