[package]
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
description = "Radix Tree data structure"
edition = "2018"
license = "MPL-2.0"
name = "kelvin-radix"
repository = "https://github.com/dusk-network/kelvin"
keywords = ["datastructure", "kelvin"]
version = "0.7.0"

[dependencies]
kelvin = { path = "../..", version = "0.11" }
