[package]
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
description = "Radix Tree data structure"
edition = "2018"
license = "MPL-2.0"
name = "kelvin-radix"
repository = "https://github.com/dusk-network/kelvin"
keywords = ["datastructure", "kelvin"]
version = "0.11.0"

[dependencies]
kelvin = { path = "../..", version = "0.19" }
canonical = { path = "../../../canonical/canon" }
canonical_derive = { path = "../../../canonical/canon_derive" }
canonical_fuzz = { path = "../../../canonical/canon_fuzz" }

[dev-dependencies]
canonical_host = { path = "../../../canonical/canon_host" }
