[package]
name = "kelvin-two3"
version = "0.6.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
repository = "https://github.com/dusk-network/kelvin"
keywords = ["datastructure", "kelvin"]
license = "MPL-2.0"
description = "2-3 Tree Data structure"

[dependencies]
kelvin = { path = "../..", version = "0.10"  }
arrayvec = "0.5"
