[package]
name = "kelvin-two3"
version = "0.11.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
repository = "https://github.com/dusk-network/kelvin"
keywords = ["datastructure", "kelvin"]
license = "MPL-2.0"
description = "2-3 Tree Data structure"

[dependencies]
kelvin = { path = "../..", version = "0.19"  }
canonical = { path = "../../../canonical/canon" }
canonical_derive = { path = "../../../canonical/canon_derive" }
arrayvec = "0.5"

[dev-dependencies]
canonical_host = { path = "../../../canonical/canon_host" }
